--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
             <p>Web Studio</p>
     
             <ul>
-                <li><a href="#Studio" >Студия</a></li>
-                <li><a href="#Features" >Портфолио</a></li>
-                <li><a href="#Address" >Контакты</a></li>
+                <li><a href="" >Студия</a></li>
+                <li><a href="" >Портфолио</a></li>
+                <li><a href="" >Контакты</a></li>
             </ul>
             
             <ul>
@@ -32,12 +32,12 @@
 
     <main>
 
-        <section id="Studio">
+        <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <a href="" target="_blank">Заказать услугу</a>
         </section>
 
-        <section id="Features">
+        <section>
             <!-- <h2>Особенности</h2> -->
             <ul>
                 <li>
@@ -203,7 +203,7 @@
 
     </main>
 
-    <footer id="Address">
+    <footer>
         <p>Web Studio</p>
         <section>
             <!-- <h2>контакты</h2> -->
