--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </nav>    
             <ul>
                 <li><a href="mailto:info@devstudio.com" target="_blank">
-                    <img src="images.jpeg/envelope.svg" alt="">
+                    <img src="images/envelope.svg" alt="" width="16">
                     info@devstudio.com
                 </a></li>
         
                 <li><a href="tel:+380961111111" target="_blank">
-                    <img src="images/vector.svg" alt="">
+                    <img src="images/vector.svg" alt="" width="10">
                     +38 096 111 11 11
                 </a></li>
             </ul>
