--- a/index.html
+++ b/index.html
@@ -205,12 +205,11 @@
     <footer>
         <p>Web Studio</p>
         <section>
-            <address id="address">Контакты</address>
-            <ul>
+            <address id="address"><ul>
                 <li>г. Киев, пр-т Леси Украинки, 26</li>
                 <li>info@example.com</li>
                 <li>+38 099 111 11 11</li>
-            </ul>
+            </ul></address>
         </section>
         <section>
             <h2>присоединяйтесь</h2>
